prevent Add button from getting cut off in IE

--- a/src/_scss/pages/dashboard/filters/_submissionIdFilter.scss
+++ b/src/_scss/pages/dashboard/filters/_submissionIdFilter.scss
@@ -7,6 +7,12 @@
         height: 40px;
         font-size: rem(14);
         @include align-items(center);
-        overflow: hidden;
+        @include justify-content(space-between);
+        .text-filter__input {
+            @include flex(1 1 80%);
+        }
+        .text-filter__button {
+            @include flex(0 0 20%);
+        }
     }
 }
